basic pipeline working for the register functionality -> implement authtokens next and deal with invalid user values

--- a/web/index.html
+++ b/web/index.html
@@ -208,7 +208,7 @@
         <li>
           <a href="javascript:register()">/user/register</a> Use this to register a user.
           An authorization authtoken is returned. Use it just as you would a authtoken from login.
-          Returns the same Model.JSONParser object as log in. It should be noted that when you register a
+          Returns the same Handlers.JSONParser object as log in. It should be noted that when you register a
           user the database will automatically be filled.(Meaning you do not need to call the /fill API noted above).
           No authorization authtoken is required.
         </li>
